--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,18 @@
 			<version>1.18.28</version> <!-- Ou versão mais recente -->
 			<scope>provided</scope>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
 		</dependency>
 
 
