feat: add lombok in apliction

--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,11 @@
 		
 		-->
 
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.28</version> <!-- Ou versão mais recente -->
+			<version>1.18.34</version>
 			<scope>provided</scope>
 		</dependency>
 
